--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -1,108 +1,111 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/styles.css" />
     <title>Contacto</title>
     <link rel="shortcut icon" href="../images/logo.png" />
-  </head>
-  <body>
-    <!-- Navbar -->
-    <header>
-      <a href="../index.html"><img src="../images/logoCarpooleo.svg" alt="logo" class="logo whiteSvg"/></a>
-      <nav>
-        <ul class="links">
-          <li><a href="sobreNosotros.html">Sobre Nosotros</a></li>
-          <li><a href="producto.html">Producto</a></li>
-          <li><a href="blog.html">Blog</a></li>
-          <li><a href="contacto.html">Contacto</a></li>
-        </ul>
-      </nav>
-    </header>
+</head>
 
-    <!-- Contenido -->
-    <section class="textSection">
-        <h2 class="textSectionTitle">¿Te quedan dudas o queres hablar con nosotros? Completa el formulario y nos pondremos en contacto</h2>
-    </section>
+<body>
+    <div class="grid">
+        <!-- Navbar -->
+        <header>
+            <a href="../index.html"><img src="../images/logoCarpooleo.svg" alt="logo" class="logo whiteSvg" /></a>
+            <nav>
+                <ul class="links">
+                    <li><a href="../index.html">Inicio</a></li>
+                    <li><a href="sobreNosotros.html">Sobre Nosotros</a></li>
+                    <li><a href="producto.html">Producto</a></li>
+                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="contacto.html">Contacto</a></li>
+                </ul>
+            </nav>
+        </header>
 
-    <section class="contactSection">
-        <article>
-            <form action="#">
-                <fieldset class="contactForm whiteBackground">
-                  <label for="nombre" class="formLabel">Nombre y Apellido: </label>
-                  <input type="text" class="formInput"/>
-                  <label for="email" class="formLabel">Email: </label>
-                  <input type="email" name="email" class="formInput"/>
-                  <label for="mensaje" class="formLabel">Dejanos tu mensaje: </label>
-                  <textarea name="mensaje" placeholder="Escribe aqui..." class="formTextarea"></textarea></label>
-                  <input type="submit" value="Enviar" class="formButton" />
-                </fieldset>
-              </form>
-        </article>
-        <article class="contactInfo whiteBackground">
-            <h3 class="contactInfoTitle">Información de contacto</h3>
-            <div class="contactInfoRow">
-                <img src="../images/telephone.svg" alt="Icono Telefono" class="icon">
-                <p>+11 2643 777</p>
-            </div>
-            <div class="contactInfoRow">
-                <img src="../images/email.svg" alt="Icono Email" class="icon">
-                <p>contacto@carpooleo.com</p>
-            </div>
-            <div class="contactInfoRow">
-                <img src="../images/location.svg" alt="Icono Ubicacion" class="icon">
-                <p>Av. Pueyrredon y Av. Santa Fe, CABA, Argentina</p>
-            </div>
-            <div class="contactInfoRow">
-              <a href=""><img src="../images/instagram.svg" alt="Instagram" class="icon"></a>
-              <a href=""><img src="../images/youtube.svg" alt="YouTube" class="icon"/></a>
-              <a href=""><img src="../images/twitter.svg" alt="Twitter" class="icon"/></a>
-            </div>
-        </article>
-    </section>
-    
-    <section class="mapSection">
-      <h3>Vení visitá nuestras oficianas</h3>
-      <iframe
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.3855016182447!2d-58.404556984770494!3d-34.5944121804619!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcca908d89b80f%3A0xdd304872ef2d09e0!2sAv.%20Santa%20Fe%20%26%20Av.%20Pueyrred%C3%B3n%2C%20C1015%20CABA!5e0!3m2!1sen!2sar!4v1649209608239!5m2!1sen!2sar"
-        width="400"
-        height="300"
-        style="border: 0"
-        allowfullscreen=""
-        loading="lazy"
-      ></iframe>
-    </section>
+        <!-- Contenido -->
+        <div class="gridContent">
+            <section class="textSection">
+                <h2 class="textSectionTitle">¿Te quedan dudas o queres hablar con nosotros? Completa el formulario y nos
+                    pondremos en contacto</h2>
+            </section>
 
-    <!-- Pie de pagina -->
-    <footer>
-      <article>
-        <a href=""><img src="../images/instagram.svg" alt="Instagram" class="icon whiteSvg"></a>
-        <a href=""><img src="../images/youtube.svg" alt="YouTube" class="icon whiteSvg"/></a>
-        <a href=""><img src="../images/twitter.svg" alt="Twitter" class="icon whiteSvg"/></a>
-      </article>
+            <section class="contactSection">
+                <article>
+                    <form action="#">
+                        <fieldset class="contactForm whiteBackground">
+                            <label for="nombre" class="formLabel">Nombre y Apellido: </label>
+                            <input type="text" class="formInput" />
+                            <label for="email" class="formLabel">Email: </label>
+                            <input type="email" name="email" class="formInput" />
+                            <label for="mensaje" class="formLabel">Dejanos tu mensaje: </label>
+                            <textarea name="mensaje" placeholder="Escribe aqui..." class="formTextarea"></textarea></label>
+                            <input type="submit" value="Enviar" class="formButton" />
+                        </fieldset>
+                    </form>
+                </article>
+                <article class="contactInfo whiteBackground">
+                    <h3 class="contactInfoTitle">Información de contacto</h3>
+                    <div class="contactInfoRow">
+                        <img src="../images/telephone.svg" alt="Icono Telefono" class="icon">
+                        <p>+11 2643 777</p>
+                    </div>
+                    <div class="contactInfoRow">
+                        <img src="../images/email.svg" alt="Icono Email" class="icon">
+                        <p>contacto@carpooleo.com</p>
+                    </div>
+                    <div class="contactInfoRow">
+                        <img src="../images/location.svg" alt="Icono Ubicacion" class="icon">
+                        <p>Av. Pueyrredon y Av. Santa Fe, CABA, Argentina</p>
+                    </div>
+                    <div class="contactInfoRow">
+                        <a href=""><img src="../images/instagram.svg" alt="Instagram" class="icon"></a>
+                        <a href=""><img src="../images/youtube.svg" alt="YouTube" class="icon" /></a>
+                        <a href=""><img src="../images/twitter.svg" alt="Twitter" class="icon" /></a>
+                    </div>
+                </article>
+            </section>
 
-      <section>
-        <ul class="footerLinks">
-          <li><a href="sobreNosotros.html">Sobre Nosotros</a></li>
-          <li><a href="producto.html">Producto</a></li>
-          <li><a href="blog.html">Blog</a></li>
-          <li><a href="contacto.html">Contacto</a></li>
-        </ul>
-      </section>
-      <section class="newsletter">
-        <p>Suscribite a nuestro Newsletter</p>
-        <input type="email" placeholder="Email..." />
-        <button>Suscribite</button>
-      </section>
-      <section class="downloads">
-        <article>
-          <p>Descarga la app</p>
-          <a href=""><img src="../images/googlePlay.svg" alt="" class="downloadApp"/></a>
-          <a href=""><img src="../images/AppStore.svg" alt="" class="downloadApp"/></a>
-        </article>
-      </section>
-    </footer>
-  </body>
+            <section class="mapSection">
+                <h3>Vení visitá nuestras oficianas</h3>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.3855016182447!2d-58.404556984770494!3d-34.5944121804619!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcca908d89b80f%3A0xdd304872ef2d09e0!2sAv.%20Santa%20Fe%20%26%20Av.%20Pueyrred%C3%B3n%2C%20C1015%20CABA!5e0!3m2!1sen!2sar!4v1649209608239!5m2!1sen!2sar" class="iframe"></iframe>
+            </section>
+        </div>
+
+        <!-- Pie de pagina -->
+        <footer>
+            <article>
+                <a href=""><img src="../images/instagram.svg" alt="Instagram" class="icon whiteSvg"></a>
+                <a href=""><img src="../images/youtube.svg" alt="YouTube" class="icon whiteSvg" /></a>
+                <a href=""><img src="../images/twitter.svg" alt="Twitter" class="icon whiteSvg" /></a>
+            </article>
+
+            <section>
+                <ul class="footerLinks">
+                    <li><a href="sobreNosotros.html">Sobre Nosotros</a></li>
+                    <li><a href="producto.html">Producto</a></li>
+                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="contacto.html">Contacto</a></li>
+                </ul>
+            </section>
+            <section class="newsletter">
+                <p>Suscribite a nuestro Newsletter</p>
+                <input type="email" placeholder="Email..." />
+                <button>Suscribite</button>
+            </section>
+            <section class="downloads">
+                <article>
+                    <p>Descarga la app</p>
+                    <a href=""><img src="../images/googlePlay.svg" alt="" class="downloadApp" /></a>
+                    <a href=""><img src="../images/AppStore.svg" alt="" class="downloadApp" /></a>
+                </article>
+            </section>
+        </footer>
+    </div>
+</body>
+
 </html>
