--- a/pages/producto.html
+++ b/pages/producto.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/styles.css">
     <title>Producto</title>
     <link rel="shortcut icon" href="../images/logo.png">
@@ -33,10 +34,10 @@
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vehicula vulputate tempor.
                         Donec sagittis ornare.</p>
                 </article>
-                <img src="../images/appFrontCrop.png" alt="" class="productImage">
+                <img src="../images/appFrontCrop.png" alt="" class="productImage" data-aos="fade-up" data-aos-duration="1000">
             </section>
             <section class="bannerSection noPaddingBottom reverseWrap">
-                <img src="../images/AppViajeCrop.png" alt="" class="productImage">
+                <img src="../images/AppViajeCrop.png" alt="" class="productImage" data-aos="fade-up"data-aos-duration="1000">
                 <article class="bannerArticle">
                     <h2 class="bannerTitle blackFont">Lorem ipsum dolor sit amet, consectetur adipiscing.</h2>
                     <p class="bannerText blackFont">
@@ -53,7 +54,7 @@
                         <img src="../images/AppStore.svg" alt="" class="productDownload">
                     </div>
                 </article>
-                <img src="../images/appPreview.png" alt="" class="imgBannerIndex">
+                <img src="../images/appPreview.png" alt="" class="imgBannerIndex " data-aos="flip-left" data-aos-duration="1000">
             </section>
 
         <!-- Pie de Pagina -->
@@ -86,6 +87,11 @@
             </section>
         </footer>
 
+        <!-- Animation Script -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script> 
+    <script>
+        AOS.init();
+    </script>
 </body>
 
 </html>
