Fixed the src of an image in producto

--- a/pages/producto.html
+++ b/pages/producto.html
@@ -50,7 +50,7 @@
                     <h2 class="bannerTitle">¿Que estas esperando?</h2>
                     <p class="bannerText">Carpooleo ya esta disponible para descarga</p>
                     <div>
-                        <img src="../images/googlePlay.png" alt="" class="productDownload">
+                        <img src="../images/googlePlay.svg" alt="" class="productDownload">
                         <img src="../images/AppStore.svg" alt="" class="productDownload">
                     </div>
                 </article>
