--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/styles.css" />
     <title>Contacto</title>
     <link rel="shortcut icon" href="../images/logo.png" />
@@ -12,16 +13,33 @@
 
 <body>
         <!-- Navbar -->
-        <header>
-            <a href="../index.html"><img src="../images/logoCarpooleo.svg" alt="logo" class="logo whiteSvg" /></a>
-            <nav>
-                <ul class="links">
-                    <li><a href="../index.html">Inicio</a></li>
-                    <li><a href="sobreNosotros.html">Sobre Nosotros</a></li>
-                    <li><a href="producto.html">Producto</a></li>
-                    <li><a href="blog.html">Blog</a></li>
-                    <li><a href="contacto.html">Contacto</a></li>
-                </ul>
+        <header class="sticky-top">
+            <nav class="navbar navbar-expand-lg navbar-light">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="../index.html"><img src="../images/logoCarpooleo.svg" alt="logo" class="logo whiteSvg"></a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0 links">
+                        <li class="nav-item">
+                        <a class="" aria-current="page" href="../index.html">Inicio</a>
+                        </li>
+                        <li class="nav-item">
+                        <a class="" href="sobreNosotros.html">Sobre Nosotros</a>
+                        </li>
+                        <li class="nav-item">
+                        <a class="" href="producto.html">Producto</a>
+                        </li>
+                        <li class="nav-item">
+                        <a class="" href="blog.html">Blog</a>
+                        </li>
+                        <li class="nav-item">
+                        <a class="" href="contacto.html">Contacto</a>
+                        </li>
+                    </ul>
+                    </div>
+                </div>
             </nav>
         </header>
 
@@ -102,6 +120,8 @@
                 </article>
             </section>
         </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
 </body>
 
 </html>
