--- a/index.html
+++ b/index.html
@@ -8,34 +8,35 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="css/styles.css">
+
     <title>Carpooleo</title>
     <link rel="shortcut icon" href="images/logo.png">
 </head>
 
 <body>
     <header class="sticky-top">
-        <nav class="navbar navbar-expand-lg navbar-light">
+        <nav class="navbar navbar-expand-lg navbar-dark">
             <div class="container-fluid">
                 <a class="navbar-brand" href="index.html"><img src="images/logoCarpooleo.svg" alt="logo" class="logo whiteSvg"></a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggler" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0 links">
-                    <li class="nav-item">
-                    <a class="" aria-current="page" href="index.html">Inicio</a>
+                <div class="collapse navbar-collapse" id="navbarToggler">
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                    <li class="nav-item ms-4">
+                    <a class="nav-link" aria-current="page" href="index.html">Inicio</a>
                     </li>
-                    <li class="nav-item">
-                    <a class="" href="pages/sobreNosotros.html">Sobre Nosotros</a>
+                    <li class="nav-item ms-4">
+                    <a class="nav-link" href="pages/sobreNosotros.html">Sobre Nosotros</a>
                     </li>
-                    <li class="nav-item">
-                    <a class="" href="pages/producto.html">Producto</a>
+                    <li class="nav-item ms-4">
+                    <a class="nav-link" href="pages/producto.html">Producto</a>
                     </li>
-                    <li class="nav-item">
-                    <a class="" href="pages/blog.html">Blog</a>
+                    <li class="nav-item ms-4">
+                    <a class="nav-link" href="pages/blog.html">Blog</a>
                     </li>
-                    <li class="nav-item">
-                    <a class="" href="pages/contacto.html">Contacto</a>
+                    <li class="nav-item ms-4">
+                    <a class="nav-link" href="pages/contacto.html">Contacto</a>
                     </li>
                 </ul>
                 </div>
