--- a/pages/sobreNosotros.html
+++ b/pages/sobreNosotros.html
@@ -14,33 +14,33 @@
 <body>
         <!-- Navbar -->
         <header class="sticky-top">
-            <nav class="navbar navbar-expand-lg navbar-light">
+            <nav class="navbar navbar-expand-lg navbar-dark">
                 <div class="container-fluid">
                     <a class="navbar-brand" href="../index.html"><img src="../images/logoCarpooleo.svg" alt="logo" class="logo whiteSvg"></a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggler" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                     </button>
-                    <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0 links">
-                        <li class="nav-item">
-                        <a class="" aria-current="page" href="../index.html">Inicio</a>
+                    <div class="collapse navbar-collapse" id="navbarToggler">
+                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                        <li class="nav-item ms-4">
+                        <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
                         </li>
-                        <li class="nav-item">
-                        <a class="" href="sobreNosotros.html">Sobre Nosotros</a>
+                        <li class="nav-item ms-4">
+                        <a class="nav-link" href="sobreNosotros.html">Sobre Nosotros</a>
                         </li>
-                        <li class="nav-item">
-                        <a class="" href="producto.html">Producto</a>
+                        <li class="nav-item ms-4">
+                        <a class="nav-link" href="producto.html">Producto</a>
                         </li>
-                        <li class="nav-item">
-                        <a class="" href="blog.html">Blog</a>
+                        <li class="nav-item ms-4">
+                        <a class="nav-link" href="blog.html">Blog</a>
                         </li>
-                        <li class="nav-item">
-                        <a class="" href="contacto.html">Contacto</a>
+                        <li class="nav-item ms-4">
+                        <a class="nav-link" href="contacto.html">Contacto</a>
                         </li>
                     </ul>
                     </div>
                 </div>
-            </nav>
+                </nav>
         </header>
 
         <!-- Contenido -->
