--- a/pages/blog.html
+++ b/pages/blog.html
@@ -11,9 +11,9 @@
     <link rel="shortcut icon" href="../images/logo.png">
 </head>
 
-<body>
+<body class="conteiner-fluid">
         <!-- Navbar -->
-        <header class="sticky-top">
+        <header class="sticky-top col-12">
             <nav class="navbar navbar-expand-lg navbar-dark">
                 <div class="container-fluid">
                     <a class="navbar-brand" href="../index.html"><img src="../images/logoCarpooleo.svg" alt="logo" class="logo whiteSvg"></a>
@@ -44,7 +44,7 @@
         </header>
 
         <!-- Contenido -->
-            <section class="blogSection">
+            <section class="blogSection col-12 w-75">
                 <h2 class="blogTitle">Blog Carpoolero</h2>
                 <p class="blogDescription">El lugar para conseguir noticias, actualizaciones y opiniones del equipo de Carpooleo
                 </p>
@@ -89,17 +89,36 @@
                         porta. Proin quis nisl consectetur, fringilla sem viverra, congue felis.</p>
                 </article>
             </section>
-        
+            
+            <nav aria-label="..." class="flexRowCenter">
+                <ul class="pagination">
+                    <li class="page-item disabled">
+                        <a class="page-link">Previous</a>
+                    </li>
+                    <li class="page-item active">
+                        <a class="page-link" href="#">1</a>
+                    </li>
+                    <li class="page-item" aria-current="page">
+                        <a class="page-link" href="blog2.html">2</a>
+                    </li>
+                    <li class="page-item">
+                        <a class="page-link" href="blog3.html">3</a>
+                    </li>
+                    <li class="page-item">
+                        <a class="page-link" href="blog2.html">Next</a>
+                    </li>
+                </ul>
+            </nav>
 
         <!-- Pie de pagina -->
         <footer>
-            <article>
-                <a href=""><img src="../images/instagram.svg" alt="Instagram" class="icon whiteSvg"></a>
-                <a href=""><img src="../images/youtube.svg" alt="YouTube" class="icon whiteSvg"></a>
-                <a href=""><img src="../images/twitter.svg" alt="Twitter" class="icon whiteSvg"></a>
+            <article class="flexRowCenter col-sm-12 col-md-6 col-lg-2">
+                <a href=""><img src="../images/instagram.svg" alt="Instagram" class="icon whiteSvg" /></a>
+                <a href=""><img src="../images/youtube.svg" alt="YouTube" class="icon whiteSvg" /></a>
+                <a href=""><img src="../images/twitter.svg" alt="Twitter" class="icon whiteSvg" /></a>
             </article>
 
-            <section>
+            <section class="col-sm-12 col-md-6 col-lg-2">
                 <ul class="footerLinks">
                     <li><a href="sobreNosotros.html">Sobre Nosotros</a></li>
                     <li><a href="producto.html">Producto</a></li>
@@ -107,17 +126,19 @@
                     <li><a href="contacto.html">Contacto</a></li>
                 </ul>
             </section>
-            <section class="newsletter">
+            <section class="flexColumnCenter newsletter col-sm-12 col-md-6 col-lg-4">
                 <p>Suscribite a nuestro Newsletter</p>
-                <input type="email" placeholder="Email...">
-                <button>Suscribite</button>
+                <div class="flexRowCenter">
+                    <input type="email" placeholder="Email..." />
+                    <button>Suscribite</button>
+                </div>
             </section>
-            <section class="downloads">
-                <article>
-                    <p>Descarga la app</p>
-                    <a href=""><img src="../images/googlePlay.svg" alt="" class="downloadApp"></a>
-                    <a href=""><img src="../images/AppStore.svg" alt="" class="downloadApp"></a>
-                </article>
+            <section class="flexColumnCenter downloads  col-sm-12 col-md-6 col-lg-4">
+                <p>Descarga la app</p>
+                <div class="flexRowCenter">
+                    <a href=""><img src="../images/googlePlay.svg" alt="" class="downloadApp" /></a>
+                    <a href=""><img src="../images/AppStore.svg" alt="" class="downloadApp" /></a>
+                </div>
             </section>
         </footer>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
