--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -11,9 +11,9 @@
     <link rel="shortcut icon" href="../images/logo.png" />
 </head>
 
-<body>
+<body class="conteiner-fluid">
         <!-- Navbar -->
-        <header class="sticky-top">
+        <header class="sticky-top col-12">
             <nav class="navbar navbar-expand-lg navbar-dark">
                 <div class="container-fluid">
                     <a class="navbar-brand" href="../index.html"><img src="../images/logoCarpooleo.svg" alt="logo" class="logo whiteSvg"></a>
@@ -44,48 +44,56 @@
         </header>
 
         <!-- Contenido -->
-            <section class="textSection">
+            <section class="textSection col-12 ">
                 <h2 class="textSectionTitle">¿Te quedan dudas o queres hablar con nosotros? Completa el formulario y nos
                     pondremos en contacto</h2>
             </section>
 
-            <section class="contactSection">
-                <article>
-                    <form action="#">
-                        <fieldset class="contactForm whiteBackground">
-                            <label for="nombre" class="formLabel">Nombre y Apellido: </label>
-                            <input type="text" class="formInput" />
-                            <label for="email" class="formLabel">Email: </label>
-                            <input type="email" name="email" class="formInput" />
-                            <label for="mensaje" class="formLabel">Dejanos tu mensaje: </label>
-                            <textarea name="mensaje" placeholder="Escribe aqui..." class="formTextarea"></textarea></label>
-                            <input type="submit" value="Enviar" class="formButton" />
-                        </fieldset>
+            <section class="row">
+                <article class="col-md-12 col-lg-6 my-5">
+                    <form class="contactForm p-5 mx-5">
+                        <div class="mb-3">
+                            <label for="name" class="form-label">Nombre y Apellido:</label>
+                            <input type="name" class="form-control" id="name">
+                        </div>
+                        <div class="mb-3">
+                            <label for="email" class="form-label">Email:</label>
+                            <input type="email" class="form-control" id="email" aria-describedby="emailHelp">
+                            <div id="emailHelp" class="form-text">Nunca vamos a compartir tu email con nadie</div>
+                        </div>
+                        <div class="mb-3">
+                            <label for="textArea" class="form-label">Example textarea</label>
+                            <textarea class="form-control" id="textArea" rows="3"></textarea>
+                        </div>
+                        <button type="submit" class="btn btn-primary">Enviar</button>
                     </form>
                 </article>
-                <article class="contactInfo whiteBackground">
-                    <h3 class="contactInfoTitle">Información de contacto</h3>
-                    <div class="contactInfoRow">
-                        <img src="../images/telephone.svg" alt="Icono Telefono" class="icon">
-                        <p>+11 2643 777</p>
-                    </div>
-                    <div class="contactInfoRow">
-                        <img src="../images/email.svg" alt="Icono Email" class="icon">
-                        <p>contacto@carpooleo.com</p>
-                    </div>
-                    <div class="contactInfoRow">
-                        <img src="../images/location.svg" alt="Icono Ubicacion" class="icon">
-                        <p>Av. Pueyrredon y Av. Santa Fe, CABA, Argentina</p>
-                    </div>
-                    <div class="contactInfoRow">
-                        <a href=""><img src="../images/instagram.svg" alt="Instagram" class="icon"></a>
-                        <a href=""><img src="../images/youtube.svg" alt="YouTube" class="icon" /></a>
-                        <a href=""><img src="../images/twitter.svg" alt="Twitter" class="icon" /></a>
-                    </div>
-                </article>
+                <div class="col-md-12 col-lg-6 my-5">
+                    <article class="contactInfo p-5 mx-5">
+                        <h3 class="contactInfoTitle">Información de contacto</h3>
+                        <div class="contactInfoRow">
+                            <img src="../images/telephone.svg" alt="Icono Telefono" class="icon">
+                            <p>+11 2643 777</p>
+                        </div>
+                        <div class="contactInfoRow">
+                            <img src="../images/email.svg" alt="Icono Email" class="icon">
+                            <p>contacto@carpooleo.com</p>
+                        </div>
+                        <div class="contactInfoRow">
+                            <img src="../images/location.svg" alt="Icono Ubicacion" class="icon">
+                            <p>Av. Pueyrredon y Av. Santa Fe, CABA, Argentina</p>
+                        </div>
+                        <div class="contactInfoRow">
+                            <a href=""><img src="../images/instagram.svg" alt="Instagram" class="icon"></a>
+                            <a href=""><img src="../images/youtube.svg" alt="YouTube" class="icon" /></a>
+                            <a href=""><img src="../images/twitter.svg" alt="Twitter" class="icon" /></a>
+                        </div>
+                    </article>
+                </div>
+                
             </section>
 
-            <section class="mapSection">
+            <section class="mapSection flexColumnCenter my-5">
                 <h3>Vení visitá nuestras oficianas</h3>
                 <iframe
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.3855016182447!2d-58.404556984770494!3d-34.5944121804619!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcca908d89b80f%3A0xdd304872ef2d09e0!2sAv.%20Santa%20Fe%20%26%20Av.%20Pueyrred%C3%B3n%2C%20C1015%20CABA!5e0!3m2!1sen!2sar!4v1649209608239!5m2!1sen!2sar" class="iframe"></iframe>
@@ -93,13 +101,13 @@
 
         <!-- Pie de pagina -->
         <footer>
-            <article>
-                <a href=""><img src="../images/instagram.svg" alt="Instagram" class="icon whiteSvg"></a>
+            <article class="flexRowCenter col-sm-12 col-md-6 col-lg-2">
+                <a href=""><img src="../images/instagram.svg" alt="Instagram" class="icon whiteSvg" /></a>
                 <a href=""><img src="../images/youtube.svg" alt="YouTube" class="icon whiteSvg" /></a>
                 <a href=""><img src="../images/twitter.svg" alt="Twitter" class="icon whiteSvg" /></a>
             </article>
 
-            <section>
+            <section class="col-sm-12 col-md-6 col-lg-2">
                 <ul class="footerLinks">
                     <li><a href="sobreNosotros.html">Sobre Nosotros</a></li>
                     <li><a href="producto.html">Producto</a></li>
@@ -107,17 +115,19 @@
                     <li><a href="contacto.html">Contacto</a></li>
                 </ul>
             </section>
-            <section class="newsletter">
+            <section class="flexColumnCenter newsletter col-sm-12 col-md-6 col-lg-4">
                 <p>Suscribite a nuestro Newsletter</p>
-                <input type="email" placeholder="Email..." />
-                <button>Suscribite</button>
+                <div class="flexRowCenter">
+                    <input type="email" placeholder="Email..." />
+                    <button>Suscribite</button>
+                </div>
             </section>
-            <section class="downloads">
-                <article>
-                    <p>Descarga la app</p>
+            <section class="flexColumnCenter downloads  col-sm-12 col-md-6 col-lg-4">
+                <p>Descarga la app</p>
+                <div class="flexRowCenter">
                     <a href=""><img src="../images/googlePlay.svg" alt="" class="downloadApp" /></a>
                     <a href=""><img src="../images/AppStore.svg" alt="" class="downloadApp" /></a>
-                </article>
+                </div>
             </section>
         </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
